changed layout and aadded random picutres

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,20 +31,11 @@
         </div>
     </div>
 </nav>
-<!-- Masthead-->
-<header class="masthead">
-    <div class="container d-flex h-100 align-items-center">
-        <div class="mx-auto text-center">
-            <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
-            <h2 class="text-white-50 mx-auto mt-2 mb-5">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template: </h2>
-            <a class="btn btn-primary js-scroll-trigger"  href="http://startbootstrap.com/template-overviews/grayscale/">startbootstrap.com</a>
-        </div>
-    </div>
-</header>
-<!-- About-->
+{% block body %}
+
 
 <!-- Projects-->
-{% block body %}
+
 
 {% endblock %}
 <!-- Contact-->
@@ -95,7 +86,7 @@
 <!-- Third party plugin JS-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 <!-- Core theme JS-->
-<script src="../public/js/scripts.js"></script>
+<script src="/js/scripts.js"></script>
 
 </body>
 </html>
